internal/diff/testdata/diff/overlay-affinity/k8s/extra/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: transcoder-ingress
spec:
  podSelector:
    matchLabels:
      kelson.dev/component: transcoder
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              acme.com/partner: cdn
      ports:
        - port: 8443
